タギング機能

--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -119,6 +119,15 @@ th {
     margin-bottom: 2.0rem;
 }
 
+.input.select .checkbox {
+    display: inline-block;
+    margin-right: 1.5rem;
+}
+.input.select .checkbox label {
+    font-size: 1.7rem;
+    font-weight: normal;
+}
+
 /* Paginator */
 .paginator {
     text-align: right;
